log
Mon 06 May 2024 02:50:00 PM UTC: 
 tests:  1|8
total_score: 0/70
bcd712b
Mon 06 May 2024 03:14:02 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
50dbb65
Mon 06 May 2024 03:21:27 PM UTC: 
 treemap.c | 41 ++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 40 insertions(+), 1 deletion(-)
 tests:  3|7
total_score: 5/70
3067d96
Mon 06 May 2024 03:23:29 PM UTC: 
 treemap.c | 47 +++++++++--------------------------------------
 1 file changed, 9 insertions(+), 38 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:48:16: error: unused variable ‘new’ [-Werror=unused-variable]
   48 |     TreeNode * new = createTreeNode(key, value);
      |                ^~~
cc1: all warnings being treated as errors
Compilation failed
36670f6
Mon 06 May 2024 03:24:00 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:49:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   49 |     return NULL;
      |            ^~~~
treemap.c:47:6: note: declared here
   47 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
07e50b9
Mon 06 May 2024 03:37:14 PM UTC: 
 treemap.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
In file included from test.c:4:
treemap.c:48:16: error: unused variable ‘new’ [-Werror=unused-variable]
   48 |     TreeNode * new = createTreeNode(key, value);
      |                ^~~
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
577a831
Mon 06 May 2024 03:37:37 PM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
In file included from test.c:4:
treemap.c:48:16: error: unused variable ‘new’ [-Werror=unused-variable]
   48 |     TreeNode * new = createTreeNode(key, value);
      |                ^~~
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
b0b2af7
Mon 06 May 2024 03:39:42 PM UTC: 
 treemap.c | 13 ++-----------
 1 file changed, 2 insertions(+), 11 deletions(-)
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
In file included from test.c:4:
treemap.c:48:16: error: unused variable ‘new’ [-Werror=unused-variable]
   48 |     TreeNode * new = createTreeNode(key, value);
      |                ^~~
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
c4cecad
Mon 06 May 2024 03:40:03 PM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
cdeeafa
Mon 06 May 2024 03:40:37 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:48:16: error: unused variable ‘new’ [-Werror=unused-variable]
   48 |     TreeNode * new = createTreeNode(key, value);
      |                ^~~
cc1: all warnings being treated as errors
Compilation failed
1d0a932
Sat 11 May 2024 03:03:10 PM UTC: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  11|6
total_score: 15/70
d98b629
Sat 11 May 2024 03:14:52 PM UTC: 
 treemap.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
 tests:  12|6
total_score: 15/70
5e30149
Sat 11 May 2024 03:16:27 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  13|5
total_score: 25/70
86fa2fa
Sat 11 May 2024 03:18:12 PM UTC: 
 treemap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  15|4
total_score: 25/70
4d99649
Sat 11 May 2024 03:25:08 PM UTC: 
 treemap.c | 18 ++++++++++++++----
 1 file changed, 14 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:92:36: error: statement with no effect [-Werror=unused-value]
   92 |                 node->parent->left == NULL;
      |                                    ^
treemap.c:94:37: error: statement with no effect [-Werror=unused-value]
   94 |                 node->parent->right == NULL;
      |                                     ^
cc1: all warnings being treated as errors
Compilation failed
46e7760
Sat 11 May 2024 03:25:18 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  16|4
total_score: 30/70
971a1f4
Sat 11 May 2024 03:33:08 PM UTC: 
 treemap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  17|4
total_score: 35/70
77f6e84
Sat 11 May 2024 03:34:24 PM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
9a88506
Sat 11 May 2024 03:37:25 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
15c3959
Sat 11 May 2024 03:45:26 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  18|3
total_score: 40/70
b258df6
Sat 11 May 2024 03:45:46 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  18|3
total_score: 40/70
d14ffee
Sat 11 May 2024 03:49:10 PM UTC: 
 treemap.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:176:1: error: control reaches end of non-void function [-Werror=return-type]
  176 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
04504e4
